<!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Android Trivia</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <string name="name">SU MIN JING</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio">Hi, my name is SU MIN JING.
    \n\n I’m currently learning Kotlin.
    \n\n With 4 years of professional experience and a master degree in finance,
    \n   I am passionate to continue developing my career in the field of finance.
    \n\n My working experience ranges from OTC trading, funds and ILP referral,
    \n   to customer relationship management.
    \n\n I possess excellent communication skills and am detail-oriented.
    \n\n Furthermore, I have been exploring my full potentials through self-learning.
    \n\n Focus especially on overseas TIFs, and the utilization of R language to analyze the market and products.
    \n\n Now, I am ready for new challenges with Android developer!
    \n\n How to reach me : www.linkedin.com/in/su-min-jing \n\n</string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="done">Done</string>
    <string name="self_pic_describe">Self Pictrue</string>
    <string name="text_button_name">Name</string>
    <string name="text_botton_nickname">Nick Name</string>
    <string name="text_button_aboutme">About Me</string>
    <string name="text_nickname">Jim</string>
    <string name="text_menu_profileFragment">Profile</string>
    <string name="text_button_profile">Profile</string>

</resources>
